--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,5 @@ jobs:
        - image: circleci/python:3.4
      steps:
        - checkout
-       - run: echo "hello world"
+       - run: 
+         command: python test.py
