--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,4 +6,4 @@ jobs:
      steps:
        - checkout
        - run: 
-           command: python /home/circleci/project/ACME-IIQ/tests/test.py
+           command: pwd
