--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
        - checkout
        - run: 
            name: Install lxml
-           command: pip install lxml==3.6.0
+           command: pip install --user lxml==3.6.0
        - run:
            name: Run test script
            command: python /home/circleci/project/tests/test.py
